--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "description": "This is Blog Project",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "http-status": "^1.7.4",
