--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
-    "vue3-toastify": "^0.2.3"
+    "vue3-toastify": "^0.2.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
